# PyStreamPDF

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  EXTENDED_SESSION_FINAL_SUMMARY.md  FINAL_SESSION_COMMIT.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_EXCEL_EXPORT.md  Makefile  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_SESSION1_COMPLETE.md  PHASE3_SESSION1_STATUS.md  PHASE3_SESSION2_PROGRESS.md  PHASE4_ROADMAP.md  PUBLISHING.md  README.md  RESEARCH_FINDINGS_DOCLING.md  RESEARCH_FINDINGS_LLAMAPARSE.md  RESEARCH_LAUNCH_SUMMARY.md  RESEARCH_PHASE_START_SUMMARY.md  RESEARCH_PHASE_UPDATE_STRUCTURAL.txt  RESEARCH_READY_SUMMARY.txt  RESEARCH_ROADMAP_WEEK_BY_WEEK.md  STREAMPDF_CACHING_STRATEGY.md  STREAMPDF_RESEARCH_PHASE.md  STREAMPDF_VISION.md  STRUCTURAL_METADATA_STRATEGY.md  pyproject.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: audit.rs  context.rs  diagnostics.rs  document.rs  error.rs  forms.rs  heading_extractor.rs  index.rs  lib.rs  markdown.rs  navigator.rs  page.rs  pdf_parser.rs  pipeline.rs  security.rs  structure.rs
docs/: AUTO_BUDGET_SELECTION.md  FILTERING_SETTINGS.md  OCR_AND_PARSING_ISSUES.md  OCR_FEATURE.md  PIPELINE_VISUALIZATION.md
examples/: auto_budget_selection.py  basic_parse.py  pipeline_visualization.py  search_and_filtering.py  search_demo.py
pystreampdf/: config.py  okf_entity_profiles.py  pipeline.py
python/: Cargo.toml
python/pystreampdf/: __init__.py  config.py  excel_export.py  extraction.py  query_analyzer.py
python/pystreampdf/semantic/: __init__.py  assembler.py  citations.py  entities.py  graph.py  relationships.py  topics.py  verifier.py
python/src/: lib.rs
python/streampdf/: __init__.py
scripts/: download_pdfium.sh
tests/: conftest.py  test_audit.py  test_benchmark.py  test_document.py  test_excel_export_integration.py  test_extraction.py  test_index.py  test_navigator.py  test_security.py  test_semantic_entities.py  test_semantic_phase4_2.py  test_structure.py
