[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "streampdf"
dynamic = ["version"]
description = "Intelligence engine for PDFs: selective retrieval, structure analysis, and token-efficient RAG"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
keywords = ["pdf", "retrieval", "rag", "ai", "intelligence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/Mullassery/StreamPDF"
Issues = "https://github.com/Mullassery/StreamPDF/issues"

[tool.maturin]
python-source = "python"
module-name = "streampdf._core"
manifest-path = "python/Cargo.toml"
