[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "PyStreamPDF"
dynamic = ["version"]
description = "Intelligence engine for PDFs: selective retrieval, structure analysis, and token-efficient RAG"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
keywords = ["pdf", "retrieval", "rag", "ai", "intelligence", "search", "indexing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/Mullassery/StreamPDF"
Issues = "https://github.com/Mullassery/StreamPDF/issues"

[tool.maturin]
python-source = "python"
module-name = "pystreampdf._core"
manifest-path = "python/Cargo.toml"
