[package]
name = "pystreampdf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
streampdf-core = { path = "../core", features = ["python"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
chrono = "0.4"
